--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "graphql": "0.4.17",
     "graphql-relay": "0.3.6",
     "immutable": "^3.7.6",
+    "moment": "^2.12.0",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-relay": "^0.7.1",
