--- a/package.json
+++ b/package.json
@@ -14,31 +14,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "6.5.2",
-    "babel-loader": "6.2.3",
-    "babel-polyfill": "6.5.0",
-    "babel-preset-es2015": "6.5.0",
+    "babel-cli": "^6.6.5",
+    "babel-core": "6.7.2",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.7.2",
+    "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
-    "babel-preset-react-hmre": "1.1.0",
+    "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.5.0",
-    "babel-relay-plugin": "0.7.1",
-    "babel-relay-plugin-loader": "0.7.1",
+    "babel-relay-plugin": "^0.7.3",
+    "babel-relay-plugin-loader": "^0.7.3",
     "classnames": "2.2.3",
-    "graphql": "0.4.17",
+    "eslint": "^2.4.0",
+    "graphql": "0.4.18",
     "graphql-relay": "0.3.6",
     "immutable": "^3.7.6",
+    "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "react": "0.14.7",
     "react-dom": "0.14.7",
-    "react-relay": "^0.7.1",
-    "webpack": "^1.12.13"
+    "react-relay": "^0.7.3",
+    "webpack": "^1.12.13",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
-    "babel-eslint": "^4.1.8",
+    "babel-eslint": "^5.0.0",
     "cors": "^2.7.1",
     "eslint": "^2.0.0",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint-plugin-react": "^4.2.2",
     "express": "^4.13.4",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.7.1"
