--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "metadata": {
     "graphql": {
-      "schema": "./lib/babel/schema.json"
+      "schema": "./lib/babel-relay/schema.json"
     }
   }
 }
