--- a/package.json
+++ b/package.json
@@ -9,13 +9,47 @@
   },
   "scripts": {
     "compile": "webpack -p",
-    "update-schema": "babel-node ./scripts/updateSchema.js"
+    "eslint": "node node_modules/eslint/bin/eslint.js ./"
   },
   "author": "",
   "license": "ISC",
+  "jest": {
+    "rootDir": "",
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "setupEnvScriptFile": "<rootDir>/node_modules/fbjs-scripts/jest/environment.js",
+    "persistModuleRegistryBetweenSpecs": true,
+    "testFileExtensions": ["js"],
+    "moduleFileExtensions": ["js"],
+    "testPathDirs": [
+      "<rootDir>/node_modules/fbjs/lib/",
+      "<rootDir>/node_modules/fbjs-scripts/jest",
+      "<rootDir>/node_modules/react/lib/",
+      "<rootDir>/node_modules/react-static-container/lib/",
+      "<rootDir>/web/static/js"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/lib/",
+      "<rootDir>/src/(.*).native.js",
+      "<rootDir>/node_modules/(?!(fbjs/lib/|react/lib/|fbjs-scripts/jest))"
+    ],
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/fbjs/node_modules/core-js/",
+      "<rootDir>/node_modules/fbjs-scripts/",
+      "<rootDir>/node_modules/fbjs/node_modules/promise/",
+      "<rootDir>/node_modules/fbjs/lib/(?!(ErrorUtils.js$|fetch.js$|fetchWithRetries.js$))",
+      "<rootDir>/node_modules/react/",
+      "<rootDir>/node_modules/react-dom/",
+      "<rootDir>/node_modules/react-static-container/"
+    ],
+    "preprocessorIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "collectCoverage": true
+  },
   "dependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "6.7.2",
+    "babel-jest": "^9.0.3",
     "babel-loader": "6.2.4",
     "babel-polyfill": "6.7.2",
     "babel-preset-es2015": "6.6.0",
@@ -25,10 +59,12 @@
     "babel-relay-plugin": "^0.7.3",
     "babel-relay-plugin-loader": "^0.7.3",
     "classnames": "2.2.3",
-    "eslint": "^2.4.0",
+    "fbjs": "^0.8.0-alpha.3",
     "graphql": "0.4.18",
     "graphql-relay": "0.3.6",
     "immutable": "^3.7.6",
+    "jest": "^0.1.40",
+    "jest-cli": "^0.9.2",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "react": "0.14.7",
@@ -38,12 +74,12 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.1",
     "babel-eslint": "^5.0.0",
     "cors": "^2.7.1",
-    "eslint": "^2.0.0",
+    "eslint": "^2.4.0",
     "eslint-plugin-react": "^4.2.2",
     "express": "^4.13.4",
+    "fbjs-scripts": "^0.5.0",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.7.1"
   },
