--- a/package.json
+++ b/package.json
@@ -4,54 +4,23 @@
   "version": "1.0.0",
   "description": "To start your new Phoenix application:",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
     "compile": "webpack -p",
-    "eslint": "node node_modules/eslint/bin/eslint.js ./"
+    "eslint": "node node_modules/eslint/bin/eslint.js ./",
+    "test" : "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testFileExtensions": ["js"],
+    "moduleFileExtensions": ["js"],
+    "collectCoverage": true
   },
   "author": "",
   "license": "ISC",
-  "jest": {
-    "rootDir": "",
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "setupEnvScriptFile": "<rootDir>/node_modules/fbjs-scripts/jest/environment.js",
-    "persistModuleRegistryBetweenSpecs": true,
-    "testFileExtensions": ["js"],
-    "moduleFileExtensions": ["js"],
-    "testPathDirs": [
-      "<rootDir>/node_modules/fbjs/lib/",
-      "<rootDir>/node_modules/fbjs-scripts/jest",
-      "<rootDir>/node_modules/react/lib/",
-      "<rootDir>/node_modules/react-static-container/lib/",
-      "<rootDir>/web/static/js"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/lib/",
-      "<rootDir>/src/(.*).native.js",
-      "<rootDir>/node_modules/(?!(fbjs/lib/|react/lib/|fbjs-scripts/jest))"
-    ],
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/fbjs/node_modules/core-js/",
-      "<rootDir>/node_modules/fbjs-scripts/",
-      "<rootDir>/node_modules/fbjs/node_modules/promise/",
-      "<rootDir>/node_modules/fbjs/lib/(?!(ErrorUtils.js$|fetch.js$|fetchWithRetries.js$))",
-      "<rootDir>/node_modules/react/",
-      "<rootDir>/node_modules/react-dom/",
-      "<rootDir>/node_modules/react-static-container/"
-    ],
-    "preprocessorIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ],
-    "collectCoverage": true
-  },
   "dependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "6.7.2",
-    "babel-jest": "^9.0.3",
     "babel-loader": "6.2.4",
-    "babel-polyfill": "6.7.2",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
@@ -63,8 +32,6 @@
     "graphql": "0.4.18",
     "graphql-relay": "0.3.6",
     "immutable": "^3.7.6",
-    "jest": "^0.1.40",
-    "jest-cli": "^0.9.2",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "react": "0.14.7",
@@ -81,7 +48,10 @@
     "express": "^4.13.4",
     "fbjs-scripts": "^0.5.0",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack-hot-middleware": "^2.7.1",
+    "jest-cli": "^0.9.2",
+    "babel-jest": "^9.0.3",
+    "babel-polyfill": "6.7.2"
   },
   "metadata": {
     "graphql": {
