trying to get first test to run

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     ],
     "collectCoverage": true,
     "unmockedModulePathPatterns": [
-      "react"
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils"
     ]
   },
   "author": "",
