--- a/package.json
+++ b/package.json
@@ -19,11 +19,26 @@
       "js"
     ],
     "collectCoverage": true,
+    "setupTestFrameworkScriptFile": "jestSetup.js",
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react",
       "<rootDir>/node_modules/react-dom",
       "<rootDir>/node_modules/react-addons-test-utils",
-      "moment"
+      "moment",
+      "jasmine-expect-jsx",
+      "fbjs",
+      "enzyme",
+      "expect",
+      "cheerio",
+      "htmlparser2",
+      "lodash",
+      "domhandler",
+      "object.assign",
+      "define-properties",
+      "function-bind",
+      "object-keys",
+      "object.values",
+      "es-abstract"
     ]
   },
   "author": "",
@@ -56,8 +71,10 @@
     "babel-jest": "^9.0.3",
     "babel-polyfill": "6.7.2",
     "cors": "^2.7.1",
+    "enzyme": "^2.2.0",
     "eslint": "^2.4.0",
     "eslint-plugin-react": "^4.2.2",
+    "expect-jsx": "^2.4.0",
     "express": "^4.13.4",
     "fbjs-scripts": "^0.5.0",
     "jest-cli": "^0.9.2",
