Displays items from database with graphql

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ erl_crash.dump
 
 # Custom added
 node_modules
-elm_stuff/build-artifacts
-elm_stuff/packages
+**/elm_stuff/build-artifacts
+**/elm_stuff/packages
 .DS_Store
 
 #RethinkDB
