--- a/assets/package.json
+++ b/assets/package.json
@@ -5,8 +5,8 @@
     "start": "webpack --watch-stdin --progress --color"
   },
   "dependencies": {
-    "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
